[gd_scene load_steps=4 format=3 uid="uid://fl8880bjge4w"]

[ext_resource type="Script" path="res://GameScene.gd" id="1_dj1jk"]

[sub_resource type="SystemFont" id="SystemFont_y8avb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cfjui"]
bg_color = Color(0.0181242, 0.133992, 0.146381, 1)

[node name="GameScene" type="Node2D"]
script = ExtResource("1_dj1jk")

[node name="ButtonReturn" type="Button" parent="."]
offset_left = 36.0
offset_top = 80.0
offset_right = 311.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 40
text = "返回主菜单"

[node name="LabelScore" type="Label" parent="."]
offset_left = 39.0
offset_top = 219.0
offset_right = 234.0
offset_bottom = 274.0
theme_override_fonts/font = SubResource("SystemFont_y8avb")
theme_override_font_sizes/font_size = 40
text = "分数：0"

[node name="LabelSecond" type="Label" parent="."]
offset_left = 40.0
offset_top = 355.0
offset_right = 241.0
offset_bottom = 397.0
theme_override_font_sizes/font_size = 30
text = "剩余秒数：300"

[node name="LabelWin" type="Label" parent="."]
offset_left = 47.0
offset_top = 608.0
offset_right = 347.0
offset_bottom = 745.0
theme_override_font_sizes/font_size = 100

[node name="MineScenePanel" type="Panel" parent="."]
offset_left = 400.0
offset_right = 1200.0
offset_bottom = 800.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cfjui")

[connection signal="pressed" from="ButtonReturn" to="." method="_on_button_return_pressed"]
